--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
      <link rel="stylesheet" href="css/style.css">
     
-    <title>Admin Panel</title>
+    <title>Edit Job</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark background">
@@ -21,7 +21,7 @@
       <div class="collapse navbar-collapse navmain" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item navmain">
-            <a class="btn btn-lg btn-outline-primary" class="nav-link active" aria-current="page" href="/addjob">Add Job</a>
+            <a class="btn btn-lg btn-outline-primary" class="nav-link active" aria-current="page" href="/">Back to Admin</a>
           </li>
           
           
@@ -32,61 +32,115 @@
 
       </div>
     </div>
-  </nav>
-
+  </nav> 
 
 <div class="container-fluid background pt-5 banner ">
    
       <figure class="text-center backgroundsty pt-5">
         <blockquote class="blockquote pt-5">
-          <h1 style="font-size: 50px;">Welcome to Admin Panel</h1>
+          <h1 style="font-size: 50px;">We provide the Best</h1>
         </blockquote>
         <figcaption class="blockquote-footer backgroundsty pt-3" style="font-size: 30px;">
-            Build,Develop and Rule the World with Your Hands <cite title="Source Title"></cite>
+            Post a Job Here to Accurie the Best <cite title="Source Title"></cite>
         </figcaption>
       </figure>
      
       
 </div>
 
-<% data.forEach(data=> { %>
-    <div class="container mt-5">
-      
-      <div class="row mt-2 g-1">
-        <div class="col-md-12">
-          <div class="card p-2">
-            <div class="text-right"> <small>
-                <%= data.JOBTYPE %>
-              </small> </div>
+<section class="vh-100 gradient-custom">
+  <div class="container py-5 h-100">
+    <div class="row justify-content-center align-items-center h-100">
+      <div class="col-12 col-lg-9 col-xl-7">
+        <div class="card shadow-2-strong card-registration" style="border-radius: 15px;">
+          <div class="card-body p-4 p-md-5">
+            <h3 class="mb-4 pb-2 pb-md-0 mb-md-5">Post a New Job</h3>
+            <form method="POST" action="/edit" enctype="multipart/form-data">
+              <div class="row">
+                <div class="col-md-6 mb-4">
 
-            <div class="text-center mt-2 p-3"> <img src="databaseimg/<%=data.JOBIMG%>" width="200" /> <span
-                class="d-block font-weight-bold">
-                <%= data.JOBNAME %>
-              </span>
-              <hr> <span>
-                <%= data.PUBLISHER %><br>
-                  <%= data.CATEGORY %>
-              </span>
-              <div class="d-flex flex-row align-items-center justify-content-center"> <i class="fa fa-map-marker"></i>
-                <small class="ml-1">
-                  <%= data.CITY %> ,<%= data.COUNTRY %>
-                </small> </div>
-                <div class="d-flex justify-content-between mt-3"> <span> $<%= data.MIN_SAL %>K-$<%= data.MAX_SAL %>
-                  K</span> 
-              <a href="/delete/<%= data.ID %>" class="btn btn-lg btn-outline-primary">Delete</a>
-                  <!-- Modal -->
-                   </div>
-                  </span> 
-                <a href="/edit/<%= data.ID %>" class="btn btn-lg btn-outline-primary">Edit</a>
-                    <!-- Modal -->
-                     </div>
-                       
-            </div>
+                  <div class="form-outline">
+                    <input value="<%=data[0].JOBNAME %>" name="JOBNAME" type="text" id="JOBNAME" class="form-control form-control-lg" />
+                    <label class="form-label" for="JOBNAME">Job Name</label>
+                  </div>
+
+                </div>
+                <div class="col-md-6 mb-4">
+
+                  <div class="form-outline">
+                    <input value="<%=data[0].CATEGORY %>" name="CATEGORY" type="text" id="CATEGORY" class="form-control form-control-lg" />
+                    <label class="form-label" for="CATEGORY">CATEGORY</label>
+                  </div>
+
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-md-6 mb-4 d-flex align-items-center">
+
+                  <div class="form-outline datepicker w-100">
+                    <input value="<%=data[0].CITY %>" name="CITY" type="text" class="form-control form-control-lg" id="CITY" />
+                    <label for="CITY" class="form-label">CITY</label>
+                  </div>
+                  
+                </div>
+                <div class="col-md-6 mb-4 d-flex align-items-center">
+                  <div class="form-outline datepicker w-100">
+                    <input value="<%=data[0].COUNTRY%>" name="COUNTRY" type="text" class="form-control form-control-lg" id="COUNTRY" />
+                    <label for="COUNTRY" class="form-label">COUNTRY</label>
+                  </div>
+                </div>
+
+                <div class="col-md-6 mb-4 d-flex align-items-center">
+                  <div class="form-outline datepicker w-100">
+                    <input value="<%=data[0].MIN_SAL %>" name="MIN_SAL" type="number" class="form-control form-control-lg" id="MIN_SAL" />
+                    <label for="MIN_SAL" class="form-label">MINIMUN SALARY</label>
+                  </div>
+                 
+                </div>
+                <div class="col-md-6 mb-4 d-flex align-items-center">
+                <div class="form-outline datepicker w-100">
+                  <input value="<%=data[0].MAX_SAL %>" name="MAX_SAL" type="number" class="form-control form-control-lg" id="MAX_SAL" />
+                  <label for="MAX_SAL" class="form-label">MAXIMUM SALARY</label>
+                </div>
+
+              </div>
+
+              
+
+              </div>
+              <div class="col-md-6 mb-4 d-flex align-items-center">
+                <div class="form-outline datepicker w-100">
+                  <input  value="<%=data[0].JOBTYPE %>" name = "JOBTYPE" type="text" class="form-control form-control-lg" id="JOBTYPE" />
+                  <label for="JOBTYPE" class="form-label">JOB TYPE</label>
+                </div>
+</div>
+              
+                  <input class="btn btn-primary btn-lg" type="submit" value="Submit" />
+                </div>
+              </div>
+              </div>
+
+              
+              
+                
+              </div>
+
+             
+
+              
+
+            </form>
           </div>
         </div>
       </div>
     </div>
-    <% }) %>
+  </div>
+</section>
+
+
+
+
 <!-- Remove the container if you want to extend the Footer to full width. -->
 <div class="container-fluid mt-5">
   <!-- Footer -->
