--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -23,8 +23,10 @@
           <li class="nav-item navmain">
             <a class="btn btn-lg btn-outline-primary" class="nav-link active" aria-current="page" href="/addjob">Add Job</a>
           </li>
-          
-          
+          <li class="nav-item navmain">
+            <a class="btn btn-lg btn-outline-danger" class="nav-link active" aria-current="page" href="/addblog">Add Blog Post</a>
+          </li>
+          </ul>
           <form method="Post" action="/signout">
           <input type="submit" value="Logout" class="btn btn-lg btn-outline-danger" style="color: white; margin-left: 10px;" >
          </form>
