--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -55,12 +55,12 @@
         <div class="card shadow-2-strong card-registration" style="border-radius: 15px;">
           <div class="card-body p-4 p-md-5">
             <h3 class="mb-4 pb-2 pb-md-0 mb-md-5">Post a New Job</h3>
-            <form method="POST" action="/edit" enctype="multipart/form-data">
+            <form method="POST" action="/edit/<%=data[0].ID%>" enctype="multipart/form-data">
               <div class="row">
                 <div class="col-md-6 mb-4">
 
                   <div class="form-outline">
-                    <input value="<%=data[0].JOBNAME %>" name="JOBNAME" type="text" id="JOBNAME" class="form-control form-control-lg" />
+                    <input value="<%=data[0].JOBNAME%>" name="JOBNAME" type="text" id="JOBNAME" class="form-control form-control-lg" />
                     <label class="form-label" for="JOBNAME">Job Name</label>
                   </div>
 
@@ -96,18 +96,13 @@
                     <input value="<%=data[0].MIN_SAL %>" name="MIN_SAL" type="number" class="form-control form-control-lg" id="MIN_SAL" />
                     <label for="MIN_SAL" class="form-label">MINIMUN SALARY</label>
                   </div>
-                 
                 </div>
                 <div class="col-md-6 mb-4 d-flex align-items-center">
                 <div class="form-outline datepicker w-100">
                   <input value="<%=data[0].MAX_SAL %>" name="MAX_SAL" type="number" class="form-control form-control-lg" id="MAX_SAL" />
                   <label for="MAX_SAL" class="form-label">MAXIMUM SALARY</label>
                 </div>
-
               </div>
-
-              
-
               </div>
               <div class="col-md-6 mb-4 d-flex align-items-center">
                 <div class="form-outline datepicker w-100">
@@ -115,22 +110,12 @@
                   <label for="JOBTYPE" class="form-label">JOB TYPE</label>
                 </div>
 </div>
-              
                   <input class="btn btn-primary btn-lg" type="submit" value="Submit" />
                 </div>
               </div>
               </div>
-
-              
-              
-                
               </div>
-
-             
-
-              
-
-            </form>
+           </form>
           </div>
         </div>
       </div>
