--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,15 +26,14 @@
           <li class="nav-item navmain">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
-          <li class="nav-item navmain">
-            <a class="nav-link" href="/Registration">Post a job</a>
-          </li>
+          
           <li class="nav-item navmain">
             <a class="nav-link" href="/about">About</a>
           </li>
           <li class="nav-item navmain">
-            <a class="nav-link" href="#">Blog</a>
+            <a class="nav-link" href="/blog">Blog</a>
           </li>
+          </ul>
           <button type="button" class="btn btn-outline-primary navbtn" style="color: white;">Contact Us</button>
          <form method="Post" action="/signout">
           <input type="submit" value="Logout" class="btn btn-lg btn-outline-danger" style="color: white; margin-left: 10px;" >
