jobportal_website commit

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -55,7 +55,7 @@
         <div class="card shadow-2-strong card-registration" style="border-radius: 15px;">
           <div class="card-body p-4 p-md-5">
             <h3 class="mb-4 pb-2 pb-md-0 mb-md-5">Post a New Job</h3>
-            <form method="POST" action="/edit/<%=data[0].ID%>" enctype="multipart/form-data">
+            <form method="post" action="/edit/<%=data[0].ID%>" enctype="multipart/form-data">
               <div class="row">
                 <div class="col-md-6 mb-4">
 
