jobportal_website commit

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -11,8 +11,14 @@
     <title>Admin Panel</title>
 </head>
 <body>
+  <% if(message!="") {%>
+    <div class="alert alert-success"> 
+      <%=message%>
+    </div>
+    <%}%>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark background">
     <div class="container">
+      
       <a class="navbar-brand " href="#">Talented-Pak</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
