--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,9 +11,19 @@
   <link rel="stylesheet" href="css/style.css">
 
   <title>Home Page</title>
+  <script>
+    $(document).ready(function(){
+        $("#myModal").modal('show');
+    });
+</script>
 </head>
 
 <body>
+  <% if(message!="") {%>
+    <div class="alert alert-success"> 
+      <%=message%>
+    </div>
+    <%}%>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark background">
     <div class="container">
       <a class="navbar-brand " href="#">Talented-Pak</a>
