--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -89,14 +89,20 @@
                         <div class="card bg-light">
                             <div class="card-body">
                                 <!-- Comment form-->
-                                <form class="mb-4"><textarea class="form-control" rows="3" placeholder="Join the discussion and leave a comment!"></textarea></form>
+                                <form method="post" action="/blog/<%=data.Blog_ID%>"  class="mb-4" >
+                                
+                                  <input type="text" name="Comment" class="form-control" rows="3" placeholder="Join the discussion and leave a comment!">
+                                </input>
+                                  <br>
+                                  <input class="btn btn-lg btn-primary" type="submit" value="Submit">
+                                </form>
                                 <!-- Comment with nested comments-->
                                 <div class="d-flex mb-4">
                                     <!-- Parent comment-->
                                     <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
                                     <div class="ms-3">
-                                        <div class="fw-bold">Commenter Name</div>
-                                        If you're going to lead a space frontier, it has to be government; it'll never be private enterprise. Because the space frontier is dangerous, and it's expensive, and it has unquantified risks.
+                                        <div class="fw-bold"></div>
+                                       
                                        
                                        
                                     </div>
