--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -58,7 +58,7 @@
             </div>
           </div>
         </div>
-        <% if (message) { %>
+        <% if (message!="") { %>
           <div class="alert mt-5 alert-success">
               <strong><%= message %></strong>
           </div>
