--- a/views/verification.ejs
+++ b/views/verification.ejs
@@ -71,34 +71,30 @@ body {
 <body>
     <section class="vh-100">
       <main class="form-signin">
-        <form method="post" action="/">
+        <form method="post" action="/signin/verify">
          <center> <img class="mb-4" src="https://cdn.pixabay.com/photo/2016/06/09/18/36/logo-1446293__340.png" alt="" width="72" height="57"></center>
-          <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+          <h1 class="h3 mb-3 fw-normal">Please Enter 6 Digit Pin-Code</h1>
       
-          <div class="form-floating">
-            <input name="user_email_address" type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">Email address</label>
-          </div>
+          
           <br>
           <div class="form-floating">
-            <input name="user_password"  type="password" class="form-control" id="floatingPassword" placeholder="Password">
-            <label for="floatingPassword">Password</label>
+            <input name="code"  type="password" class="form-control" id="code" placeholder="">
+            <label for="code">Password</label>
           </div>
       
          <br>
-          <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+          <button class="w-100 btn btn-lg btn-primary" type="submit">Submit</button>
         <br>
          <br>
-          <button class="w-100 btn btn-lg btn-primary" ><a href=""></a>Forget Password</button>
          
           <p class="mt-5 mb-3 text-muted">© 2017–2021</p>
         </form>
       </main>
-        <% if (message!="") { %>
-          <div class="alert mt-5 alert-success">
-              <strong><%= message %></strong>
-          </div>
-          <% } %>
+      <% if (message!="") { %>
+        <div class="alert mt-5 alert-success">
+            <strong><%= message %></strong>
+        </div>
+        <% } %>
       </section>
 </body>
 </html>
