--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11478,3 +11478,10 @@ position:fixed;
 .rating > input:checked + label:hover, .rating > input:checked + label:hover ~ label, .rating > input:checked ~ label:hover, .rating > input:checked ~ label:hover ~ label, .rating > label:hover ~ input:checked ~ label {
   color: #ea0;
 }   
+#MyForm{
+	display: none;
+    width: 300px;
+    border: 1px solid #ccc;
+    padding: 14px;
+    background: #ececec;
+}	
