--- a/views/addjob.ejs
+++ b/views/addjob.ejs
@@ -84,41 +84,31 @@
                   </div>
                   
                 </div>
-                <div class="col-md-6 mb-4 d-flex align-items-center">
-                  <div class="form-outline datepicker w-100">
-                    <input name="COUNTRY" type="text" class="form-control form-control-lg" id="COUNTRY" />
-                    <label for="COUNTRY" class="form-label">COUNTRY</label>
-                  </div>
-                </div>
+                
 
                 <div class="col-md-6 mb-4 d-flex align-items-center">
                   <div class="form-outline datepicker w-100">
-                    <input name="MIN_SAL" type="number" class="form-control form-control-lg" id="MIN_SAL" />
-                    <label for="MIN_SAL" class="form-label">MINIMUN SALARY</label>
+                    <input name="DATE" type="date" class="form-control form-control-lg" id="DATE" />
+                    <label for="DATE" class="form-label">DATE </label>
                   </div>
                  
                 </div>
-                <div class="col-md-6 mb-4 d-flex align-items-center">
-                <div class="form-outline datepicker w-100">
-                  <input name="MAX_SAL" type="number" class="form-control form-control-lg" id="MAX_SAL" />
-                  <label for="MAX_SAL" class="form-label">MAXIMUM SALARY</label>
-                </div>
+                
 
-              </div>
-
-              <div class="col-md-6 mb-4 d-flex align-items-center">
-                <div class="form-outline datepicker w-100">
-                  <input name="JOBIMG" type="file" class="form-control form-control-lg" id="JOBIMG" />
-                  <label for="JOBIMG" class="form-label">COMPANY LOGO</label>
-                </div>
-
-              </div>
+           
               <div class="col-md-6 mb-4 d-flex align-items-center">
                 <div class="form-outline datepicker w-100">
                   <input name = "JOBTYPE" type="text" class="form-control form-control-lg" id="JOBTYPE" />
                   <label for="JOBTYPE" class="form-label">JOB TYPE</label>
                 </div>
 </div>
+<div class="col-md-6 mb-4 d-flex align-items-center">
+  <div class="form-outline datepicker w-100">
+    <input name = "Description" type="text" class="form-control form-control-lg" id="Description" />
+    <label for="Description" class="form-label">Description</label>
+  </div>
+</div>
+
               
                   <input class="btn btn-primary btn-lg" type="submit" value="Submit" />
                 </div>
