--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -7,12 +7,13 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
   <title>Blog Post </title>
+
   <script src="https://kit.fontawesome.com/c8a90f250b.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
-
+<link rel="stylesheet" href="js/index.js">
 </head>
 
 <body>
@@ -157,12 +158,18 @@
                         </a>
                         <p>
                           <%=result.Comment%>
-                            <div class="ratings">
-                          
-                              
 
-                            </div>
-                        </p>
+   </p>
+   
+<button id="Mybtn" class="btn btn-primary">Reply</button>
+<br><br>  
+<form id="MyForm" action="" method="post">
+  	<label>Enter Name</label>
+	<input type="text" name="name" placeholder="Enter your name"/><br>
+  	<label>Enter Email</label>
+	<input type="email" name="email" placeholder="Enter your email"/><br>
+  	<input type="button" class="btn btn-default" name="submit" value="Submit"/>
+</form>
                       </div>
                     </div>
                     <%}%>
