--- a/views/home.ejs
+++ b/views/home.ejs
@@ -116,25 +116,18 @@
       <div class="row mt-2 g-1">
         <div class="col-md-12">
           <div class="card p-2">
-            <div class="text-right"> <small>
-                <%= data.JOBTYPE %>
-              </small> </div>
-
-            <div class="text-center mt-2 p-3"> <img src="databaseimg/<%=data.JOBIMG%>" width="200" /> <span
-                class="d-block font-weight-bold">
-                <%= data.JOBNAME %>
-              </span>
-              <hr> <span>
-                <%= data.PUBLISHER %><br>
-                  <%= data.CATEGORY %>
-              </span>
-              <div class="d-flex flex-row align-items-center justify-content-center"> <i class="fa fa-map-marker"></i>
-                <small class="ml-1">
-                  <%= data.CITY %> ,<%= data.COUNTRY %>
-                </small> </div>
-              <div class="d-flex justify-content-between mt-3"> <span> $<%= data.MIN_SAL %>K-$<%= data.MAX_SAL %>
-                      K</span> <button class="btn btn-sm btn-outline-dark">Apply Now</button> </div>
+            
+            <div class="container card mt-4" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title"> <%= data.JOBNAME %></h5>
+                <h6 class="card-subtitle mb-2 text-muted"> <%= data.JOBTYPE %></h6>
+                <p class="card-text"> <%= data.PUBLISHER %>,  <%= data.CATEGORY %></p>
+                <a href="#" class="card-link" style="text-decoration:none;" >  <%= data.CITY %> </a>
+                <a href="#" class="card-link" style="text-decoration:none;"><%= data.DATE %></a>
+              </div>
+              <a href="#" class="btn btn-lg btn-outline-primary">Apply Now</a>
             </div>
+           
           </div>
         </div>
       </div>
@@ -172,12 +165,12 @@
         <li class="page-item active">
           <a class="page-link" href="#"><%= pageCount%><span class="sr-only">(current)</span></a>
         </li>
-      <%}else{%>
-        <li class="page-item"><a class="page-link" href="/?page=<%=pageCount%>"><%= pageCount%></a></li>
-      <%} }%>
+      <%}%>
+      <%}%>
       <li class="page-item <%=(page==totalPages)?`disabled`:``%>">
         <a class="page-link" href="/?page=<%=(page==totalPages)?`totalPages`:`${Number(page)+1}`%>">Next</a>
       </li>
+   
     </ul>
   </nav>
       <div class="container-fluid   pt-5 mt-5  ">
