--- a/views/changepwd.ejs
+++ b/views/changepwd.ejs
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -69,38 +70,31 @@ body {
   <title>SignIn</title>
 </head>
 <body>
-    <section class="vh-100">
-      <main class="form-signin">
-        <form method="post" action="/">
-         <center> <img class="mb-4" src="https://cdn.pixabay.com/photo/2016/06/09/18/36/logo-1446293__340.png" alt="" width="72" height="57"></center>
-          <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
-      
-          <div class="form-floating">
-            <input name="user_email_address" type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">Email address</label>
-          </div>
-          <br>
-          <div class="form-floating">
-            <input name="user_password"  type="password" class="form-control" id="floatingPassword" placeholder="Password">
-            <label for="floatingPassword">Password</label>
-          </div>
-      
-         <br>
-          <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
-        <br>
-         <br>
-         <a class="w-100 btn btn-lg btn-primary" href="/reset">Forget Password </a>
-         
-         <br><br> <a class="w-100 btn btn-lg btn-primary" href="/register">Sign Up </a>
-         
-          <p class="mt-5 mb-3 text-muted">© 2017–2021</p>
-        </form>
-      </main>
-        <% if (message!="") { %>
-          <div class="alert mt-5 alert-success">
-              <strong><%= message %></strong>
-          </div>
-          <% } %>
-      </section>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!------ Include the above in your HEAD tag ---------->
+    <br><br><br>
+    <center> 
+        <div class="card text-center" style="width: 300px;">
+            <div class="card-header h5 text-white bg-primary">Password Reset</div>
+            <div class="card-body px-5">
+                <p class="card-text py-2">
+                    Enter your New Password
+                </p>
+                <form action="/resetpasword" method="post">
+                <div class="form-outline">
+                 
+                    <input name="password" type="password" id="typeEmail" class="form-control my-3" />
+                    <label class="form-label" for="typeEmail">Email input</label>
+                    <input type="submit" class="btn btn-primary w-100" value="Reset Password">
+                </div>
+            </form>
+            </div>
+        </div>
+    </center>
+  
+    
 </body>
 </html>
+
