--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,7 +36,9 @@
           <li class="nav-item navmain">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
-          
+          <li class="nav-item navmain">
+            <a class="nav-link" href="/latest">Latest Jobs</a>
+          </li>
           <li class="nav-item navmain">
             <a class="nav-link" href="/about">About</a>
           </li>
@@ -125,7 +127,7 @@
                 <a href="#" class="card-link" style="text-decoration:none;" >  <%= data.CITY %> </a>
                 <a href="#" class="card-link" style="text-decoration:none;"><%= data.DATE %></a>
               </div>
-              <a href="#" class="btn btn-lg btn-outline-primary">Apply Now</a>
+              <a href="/apply/<%=data.ID%>" class="btn btn-lg btn-outline-primary">Apply Now</a>
             </div>
            
           </div>
@@ -133,28 +135,6 @@
       </div>
     </div>
     <% }) %>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <nav aria-label="Page navigation">
       <ul class="pagination d-flex justify-content-center mt-5">
         <li class="page-item <%=(page==1)?`disabled`:``%>">
